--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ github_repo: "blog"
 github_username: "mcb00"
 
 # Permalinks
-permalink: /:year/:month/:day/:title
+permalink: /:title
 
 # OPTIONAL: override baseurl and url if using a custom domain
 # Note: leave out the trailing / from this value. 
