--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@
 
 title: Random Realizations
 description: A blog about data science, statistics, machine learning, and the scientific method.
+author: Matt Bowers
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "blog"
 github_username: "mcb00"
